kubernetes-on-prem-cluster/argocd-gitops/platform/metal-lb/ingress-controller-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: rke2-ingress-nginx-controller-admission
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-wave: '8'
spec:
  type: LoadBalancer
